add list view bus

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProject4">
         <activity
+            android:name=".Bus.BusListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Bus.BusDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".PreMainActivity"
             android:exported="false" />
         <activity
